fix: add cloak for nav flicker

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -843,3 +843,7 @@ strong {
     opacity: 1;
   }
 }
+
+[x-cloak] {
+  display: none !important;
+}
